--- a/index.html
+++ b/index.html
@@ -15,31 +15,27 @@
     <h3 class="cd">Input current Date:</h3><input type="date" id="currDate">
     <button class="btn" onclick="calculateAge()"><b>Calculate</b></button>
 </div>
+<div class="tag">
+    <div class="a">M</div>
+    <div class="b">a</div>
+    <div class="c">d</div>
+    <div class="d">e</div>
+    <div class="e">&nbsp;W</div>
+    <div class="f">i</div>
+    <div class="g">t</div>
+    <div class="h">h</div>
+    <div class="i">&nbsp;❤️</div>
+    <div class="j">&nbsp;b</div>
+    <div class="k">y</div>
+    <div class="l">&nbsp;T</div>
+    <div class="m">o</div>
+    <div class="n">n</div>
+    <div class="o">y</div>
+</div><hr>
 <div class="ann">
 <h1  id="answer"></h1>
 </div>
-<footer>
-    <p>
-<span>M</span>
-<span>a</span>
-<span>d</span>
-<span>e</span>
-<span> </span>
-<span>w</span>
-<span>i</span>
-<span>t</span>
-<span>h</span>
-<span>❤️</span>
-<span>b</span>
-<span>y</span>
-<span> </span>
-<span>T</span>
-<span>o</span>
-<span>n</span>
-<span>y</span>
-    </p>
-  </footer>
-    
+
 <script src="test.js"></script>
 </body>
 </html>
